name:                helium-overture
version:             1.0.0
synopsis:            A backwards-compatible, modern replacement for the Prelude.
license:             PublicDomain
author:              Patrick Thomson
maintainer:          patrick@helium.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Overture
  default-language:    Haskell2010
  build-depends:       base < 6
                     , bytestring
                     , deepseq
                     , lifted-base
                     , text
                     , transformers
                     , mtl
                     , random
